mpl: halos regression tests
Signed-off-by: João Mai <jmai@precisioninno.com>

--- a/src/mpl/test/CMakeLists.txt
+++ b/src/mpl/test/CMakeLists.txt
@@ -32,6 +32,8 @@ or_integration_tests(
     fixed_covers
     macros_without_pins1
     unfixed_cells_dont_fit_in_core
+    halos1
+    halos2
 )
 
 
